[package]
name = "rust-fil-nse-gpu"
version = "0.2.2"
authors = ["Keyvan Kambakhsh <keyvankambakhsh@gmail.com>", "porcuquine <porcuquine@gmail.com>"]
description = "Rust interface to GPU implementation of Filecoin's Narrow Stacked Expander (NSE) sealing algorithm"
edition = "2018"
homepage = "https://github.com/filecoin-project/rust-fil-nse-gpu"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/rust-fil-nse-gpu"

[dependencies]
ocl = { version = "0.19.4", package = "fil-ocl"}
ff = { version = "0.2.0", package = "fff" }
bellperson = { version = "0.12", default-features = false, features = ["gpu"] }
ff-cl-gen = "0.1.2"
itertools = "0.8.0"
thiserror = "1.0.10"
rand = "0.7"
structopt = { version = "0.3", default-features = false }
neptune = { version = "2.2.0", default-features = false, features = ["gpu"] }
generic-array = "0.13.2"
log = "0.4.8"
env_logger = "0.7.1"

[features]
default = ["pairing"]
pairing = ["bellperson/pairing", "neptune/pairing"]
blst = ["bellperson/blst", "neptune/blst"]