[package]
name = "gpu-cpu-test"
version = "0.1.0"
authors = ["Keyvan Kambakhsh <keyvankambakhsh@gmail.com>"]
edition = "2018"

[dependencies]
rust-fil-nse-gpu = { path = ".." }
storage-proofs = { git="https://github.com/filecoin-project/rust-fil-proofs", branch="feat/nse" }
ff = { version = "0.2.0", package = "fff" }
paired = "0.20.0"
rand = "0.7"
merkletree = "0.20.0"
tempfile = "3"
